--- a/tengyu_main/src/db.properties
+++ b/tengyu_main/src/db.properties
@@ -1,4 +1,4 @@
-mysql.username=zhangtalent
-mysql.password=yss870222
+mysql.username=***
+mysql.password=***
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://139.199.201.220:3306/tengyu?useUnicode=true&amp;characterEncoding=utf8&amp;autoReconnect=true
+mysql.url=jdbc:mysql://139.199.201.220:3306/***?useUnicode=true&amp;characterEncoding=utf8&amp;autoReconnect=true
